# Python_Webscraping_GeminiCLI

./: .gitignore  GEMINI.md  README.md  main.py  pyproject.toml
ssg_com/: agent_prd_scraping.md  agent_prd_sqlite.md  ssg_items.db  ssg_scraper.py  ssg_scraper_sqlite.py
ssg_com/data/: ssg_special_price.csv
starbucks_stores/: agent_prd_eda.md  agent_prd_scraping.md  agent_prd_streamlit_folium.md  analysis_report.md  dashboard.py  eda_analyzer.py  eda_report.md  starbucks_scraper.py
starbucks_stores/data/: starbucks_ai.csv
yes24/: agent_eda.md  agent_eda_yes24.md  agent_scraping.md  debug_eda.py  eda_analysis.py  eda_report.md  scraper.py  yes24_scraper.py
yes24/data/: yes24_ai.csv
